# Grass

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
doc/: .xdp-.$PiPLC_Testboard.drawio.svg.bkp-WHacg7
grass/: __main__.py  grass.py  libds18b20.py  mqttLogin.py  mqttsecrets.py  ottogrow.py
ottogrow/: __main__.py  libds18b20.py  ottogrow.py
