[metadata]
name = ottogrow
version = 0.0.1
author = Chrismettal
author_email = chrismettal@binary-6.de
description = Plant growth controller for PiPLC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrismettal/ottogrow
project_urls =
    Bug Tracker = https://github.com/Chrismettal/ottogrow/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: PiOS

[options]
packages = ottogrow
python_requires = >=3.6
install_requires = 
    paho-mqtt

[options.packages.find]
where = ottogrow

[options.entry_points]
console_scripts =
    ottogrow = ottogrow.__main__:main