[metadata]
name = grass
version = 0.0.1
author = Chrismettal
author_email = chrismettal@binary-6.de
description = Plant growth controller for PiPLC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrismettal/grass
project_urls =
    Bug Tracker = https://github.com/Chrismettal/grass/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: PiOS

[options]
packages = grass
python_requires = >=3.6
install_requires = 
    paho-mqtt
    adafruit-circuitpython-seesaw
    adafruit-circuitpython-ahtx0
    adafruit-circuitpython-bh1750
    
[options.packages.find]
where = grass

[options.entry_points]
console_scripts =
    grass = grass.__main__:main